# GameEngine

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  BlinkTextComponent.cpp  BlinkTextComponent.hpp  BulletComponent.cpp  BulletComponent.hpp  CMakeLists.txt  EnemyComponent.cpp  EnemyComponent.hpp  EnemyExplosionComponent.cpp  EnemyExplosionComponent.hpp  EnemyManagerComponent.cpp  EnemyManagerComponent.hpp  GameManagerComponent.cpp  GameManagerComponent.hpp  HUDComponent.cpp  HUDComponent.hpp  MotherShipComponent.cpp  MotherShipComponent.hpp  PlayerComponent.cpp  PlayerComponent.hpp  PrintTextComponent.cpp  PrintTextComponent.hpp  README.md  ShelterComponent.cpp  ShelterComponent.hpp  StartMenuComponent.cpp  StartMenuComponent.hpp  WORKSPACE  WhishlistEditorV2.md  WhishlistEdtiroV2.md  componentsRegistered.cpp  conanfile.py  engine_components_gen.sh  engine_components_generator.py  generate_devenv.sh  install_deps.sh  main.cpp  (+2 more)
bazel-ports/: BUILD-SDL2.bazel  BUILD-SDL2_Image.bazel  BUILD-box2d.bazel  BUILD-glew.bazel  BUILD-glm.bazel  BUILD-utf8-cpp.bazel  BUILD.sdl_image
conan-deps/tinyfiledialogs/: CMakeLists.txt  conanfile.py
editorV2/data/: main.scene  mainUI.prototype  meson.build
engine/: Game.cpp  GlobalData.cpp  InputManager.cpp  Range.cpp  geIO.cpp  meson.build
engine/components/: AudioComponent.cpp  CarColliderComponent.cpp  ColliderComponent.cpp  GeometryComponent.cpp  ParticleEmitterComponent.cpp  ParticlesPropertiesComponent.cpp  SpawnerComponent.cpp  SpriteAnimatedComponent.cpp  SpriteComponent.cpp  TextComponent.cpp
engine/components/ui/: UIButtonComponent.cpp  UIControlComponent.cpp  UIImageComponent.cpp  UIPanelComponent.cpp  UITextComponent.cpp  UITextInputComponent.cpp
engine/include/game-engine/: Builder.hpp  Command.hpp  FilePath.h  FileType.h  FileType.hpp  FiniteStateMachine.hpp  Game.cpp  Game.hpp  GlobalData.hpp  InputManager.hpp  Random.cpp  Random.hpp  Range.cpp  Range.hpp  api.hpp  geAudio.cpp  geAudio.hpp  geCamera.hpp  geComponent.hpp  geData.hpp  geEnvironment.hpp  geGame.hpp  geGameObject.hpp  geIO.hpp  geScreen.hpp
engine/internal/: Data.cpp  Environment.cpp  GameObject.cpp  ObjectManager.cpp  Scene.cpp  SceneManager.cpp  Screen.cpp  TimeManager.cpp  WritableData.cpp  utils.cpp
engine/internal/audio/: AudioBuffer.cpp  AudioEngine.cpp  AudioSource.cpp
engine/internal/graphics/: Camera.cpp  FBO.cpp  GraphicGeometry.cpp  GraphicHolder.cpp  GraphicSprite.cpp  GraphicsEngine.cpp  MeshData.cpp  Particle.cpp  Shader.cpp
engine/internal/pathfinding/: AStarPathfinding.cpp  Agent.cpp  Cell.cpp  Path.cpp
engine/internal/physics/: Collider.cpp  DebugView.cpp  PhysicsEngine.cpp
engine/private/: Data.cpp  Data.hpp  DelayedSetter.hpp  Environment.cpp  Environment.hpp  Factory.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  ObjectManager.cpp  ObjectManager.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Screen.cpp  Screen.hpp  TimeManager.cpp  TimeManager.hpp  WritableData.cpp  WritableData.hpp  utils.cpp  utils.hpp  yamlConverters.hpp
engine/private/audio/: AudioBuffer.cpp  AudioBuffer.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioSource.cpp
engine/private/graphics/: Camera.cpp  FBO.cpp  FBO.hpp  Graphic.hpp  GraphicGeometry.cpp  GraphicGeometry.hpp  GraphicHolder.cpp  GraphicHolder.hpp  GraphicSprite.cpp  GraphicSprite.hpp  GraphicsEngine.cpp  GraphicsEngine.hpp  MeshData.cpp  Particle.cpp  Particle.hpp  Shader.cpp  Shader.h
engine/private/pathfinding/: AStarPathfinding.cpp  AStarPathfinding.hpp  Actor.cpp  Actor.hpp  Agent.cpp  Cell.cpp  Cell.hpp  Path.cpp  Path.hpp
engine/private/physics/: Collider.cpp  Collider.hpp  DebugView.cpp  DebugView.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp
engine/public/: FilePath.cpp  Game.cpp  InputManager.cpp  geComponent.cpp  geEnvironment.cpp  geGame.cpp
engine/public/components/: AudioComponent.cpp  CarColliderComponent.cpp  CarColliderComponent.hpp  ColliderComponent.cpp  GeometryComponent.cpp  ParticleEmitterComponent.cpp  ParticlesPropertiesComponent.cpp  PathFindingAgentComponent.cpp  SpawnerComponent.cpp  SpriteAnimatedComponent.cpp  SpriteComponent.cpp  TextComponent.cpp
src/: Builder.cpp  Builder.hpp  CMakeLists.txt  Component.cpp  Component.hpp  Factory.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  InputManager.cpp  InputManager.hpp  ObjectManager.cpp  ObjectManager.hpp  Random.cpp  Random.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Screen.cpp  Screen.hpp  Singleton.hpp  utils.cpp  utils.hpp
src/audio/: AudioBuffer.cpp  AudioBuffer.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioSource.cpp  AudioSource.hpp
src/components/: AudioComponent.cpp  AudioComponent.hpp  ColliderComponent.cpp  ColliderComponent.hpp  SpriteAnimatedComponent.cpp  SpriteAnimatedComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TextComponent.cpp  TextComponent.hpp
src/events/: Observer.hpp  Subject.hpp
src/graphics/: Graphic.cpp  Graphic.hpp  GraphicHolder.cpp  GraphicHolder.hpp  GraphicsEngine.cpp  GraphicsEngine.hpp  Shader.cpp  Shader.h
src/graphics/font/: Font.cpp  Font.hpp  FontManager.cpp  FontManager.hpp  Text.cpp  Text.hpp
src/include/: api.hpp  geGameObject.hpp
src/include/game-engine/: InputManager.hpp  api.hpp  (+6 more)
src/physics/: Collider.cpp  Collider.hpp  DebugView.cpp  DebugView.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp
src/private/: Builder.hpp  Component.cpp  Component.hpp  Data.cpp  Data.hpp  Factory.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  KeyCodeMap.hpp  ObjectManager.cpp  ObjectManager.hpp  Random.cpp  Scene.cpp  SceneManager.cpp  SceneManager.hpp  Screen.cpp  Screen.hpp  Singleton.hpp  utils.cpp
src/public/: InputManager.cpp  Random.cpp  geAudio.cpp  geComponent.cpp  geEnvironment.cpp  geGame.cpp  geGameObject.cpp
test/: CMakeLists.txt  GameObjectTests.cpp  GameTests.cpp  MathTests.cpp  PathfindingTests.cpp  PropertiesTests.cpp  meson.build
test/conf/: screen.yaml
test/data/: audioComponentLoadTest.prototype  goLoadTest.yaml  meson.build  spriteComponentLoadTest.yaml  testScene.scene  testScene.yaml
(+345 files in other folders)
